src/components/layout.scss
/* ... */
.blog-post-item-summary h2 {
  color: $primary-color;
  font-weight:300;
  letter-spacing:1pt;
  font-size:12pt;
  font-family:$p-font;
  padding-bottom:10px;
  width:100%;
  text-align:left;
  margin-bottom:25px;
}

.blog-post-item button {
  margin-bottom: 30px;
}


.imageContainer {
  height:100px;
}

//Actual blog post pages

.blog-post-container {
  height:100vh;
  margin:20px;
}

.blog-post-container p {
  padding: 0 20px;
}

.blog-page-container {
  width:100%;
}

.blog-page-header {
  height:75px;
}

@media only screen and (max-width: 1024px) {
  /* For mobile phones: */
  .navLeft {
    top:0;
    left:unset;
    bottom:unset;
    width:100%;
    height:100px;
  }
  .main {
    margin-left: unset;
  }
  .blog-post-item-summary {
    width:345px;
    margin:auto;
  }
  .blog-post-item {
    display:flex;
    flex-direction: column-reverse;
    border-top: .5px solid #dbdbdb;
    border-bottom: .5px solid #dbdbdb;
    padding-right: 0;
    padding-top: 10px;
    padding-bottom: 10px;
    width:100%;
  }
  .blog-post-item-title {
    h2 {
      text-align: center;
    }
  }
  .blog-post-item-date {
    h2 {
      text-align: center;
    }
  }
  .blog-post-item-summary {
    h2 {
      text-align: center;
    }
  }
  .blog-post-item-text {
    text-align:center;
  }
  .blog-post-item-image {
    .gatsby-image-wrapper {
      width:200px !important;
      height:200px !important;
    }
  }
}

@media screen and (max-width: 1270px) {

  .contents-section__inner {
    padding-top: 1600px;
  }

  .title-section {
    .contents-text-container 
      p {
        text-align: left !important;
      
    }
  }
  .contents-title-container h2  {
    font-size: 22pt;
  }

  .contents-text-container p {
    font-size: 14pt;
    text-align:center;
  }

  h4,.skills-container-item h3,.skills-container-item h4 {
    font-size:16pt;
  }

  p {
    font-size: 14pt;
  }

  .skills-container-item p {
    font-size: 14pt;
    text-align: center;
  }

  .mainContainer {
    overflow:hidden;
  }
  .contents-text-container {
    p {
      word-wrap: break-word;
      width: 90vw;
    }
  }

  .skills-container {
    display:flex;
    flex-direction:column;
  }
  .skills-container-item {
    margin:auto;
    border-top: 1px solid #F2F2F2;
    width: 100% !important;
    padding: 40px 0;
  }

  .title-section {
    padding: 0 !important;
  }
  
  .title-section__inner-container {
    border-radius:0px;
    top: 53%;
  }

  .picture-section__inner h1 {
    font-size: 40px;
  }

  .picture-section__inner h2 {
    font-size: 25px;
  }

  .picture-section-breaker {
    margin: 15px 50px;
  }

  .header {
    justify-content: center;
  }

  .centered {
    width: unset;
  }

  .contents-section {
    padding-right:0;
    padding-left:0;
  }

  .portfolio-post-item-image {
    .gatsby-image-wrapper {
      position: unset !important;
    }
  }

  .contents-text-container {
    padding-top: 25px;
  }

  .header-inner {
    :Link {
      font-size:15px  !important;
    }
  }

  .header {
    height:60px;
  }

  .footer-inner {
    p {
      font-size: 13px !important;
    }
  }

  .blog-post-item-title h2 {
    font-size: 14pt;
  }

  .blog-post-item-date {
    h2 {
      font-size: 14px;
    }
  }

  .blog-post-item-summary {
   h2 {
     font-size: 14px;
   }
  }
}

//Iphone SE <
@media screen and (max-width: 320px) {
  p {
    font-size: 13pt !important;
  }

  .button-outlined {
    font-size: 16px;
  }

  .blog-post-item-summary {
    width: 100%;
}

  .blog-post-item-summary {
    justify-content:unset;
  }

  .title-section__inner-container {
    border-radius:0px;
    top: 55%;
  }
  
  .portfolio-post-item-details-top h5 {
    padding-right: 40px;
  }
}

